@@ -29,6 +29,8 @@ Release 0.20.0 - Unreleased
    HBASE-1064  HBase REST xml/json improvements (Brian Beggs working of
                initial Michael Gottesman work via Stack)
    HBASE-5121  Fix shell usage for format.width
+   HBASE-845   HCM.isTableEnabled doesn't really tell if it is, or not
+   HBASE-903   [shell] Can't set table descriptor attributes when I alter a table
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
